--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,14 @@
 # Site settings
-title: Hi, I'm Dominik.
-description: Dominik Haitz' professional portfolio site
+title: Jon Albo
+description: Jon Albo's portfolio site
 # baseurl: "/particle" # the subpath of your site, e.g. /blog
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: Dominik Haitz
-user_title: Dr.
-user_job_title: Data Scientist
-email: dominik.haitz [at] gmx.de
-twitter_username: d_haitz
-github_username:  dhaitz
+username: Jon Albo, PhD
+user_title: 
+user_job_title: Data Scientist + Project Manager
+email: jonalbo311@gmail.com
+
 
 exclude: ['package.json', 'src' , 'node_modules']
